--- a/test/pipeline/pipeline.yml
+++ b/test/pipeline/pipeline.yml
@@ -1,22 +1,32 @@
 name: Example Pipeline
 pipeline:
-  - test: input-1
-    expect: expect-1
-  - test: input-2
-    expect: expect-2
+  - test:
+      input: input-1
+      expect: expect-1
+  - test:
+      input: input-2
+      expect: expect-2
     
   - dockerfile: square
   
-  - test: input-1
-    expect: expect-1
-  - test: input-2
-    expect: expect-4
-    status: success
+  - test:
+      input: input-1
+      expect: expect-1
+  - test:
+      input: input-2
+      expect: expect-4
+      status: success
+  - test:
+      input: '*'
+      status: success
+  - assert: success2
     
   - dockerfile: square
   
-  - test: input-1
-    expect: expect-1
-  - test: input-2
-    expect: expect-16
-    status: success
+  - test:
+      input: input-1
+      expect: expect-1
+  - test:
+      input: input-2
+      expect: expect-16
+      status: success
