--- a/test/pipeline/pipeline.yml
+++ b/test/pipeline/pipeline.yml
@@ -118,3 +118,12 @@ pipeline:
         command: "if"
   - assert: ""
   
+  # exit keyword
+  - dockerfile: identity
+    command: "failed"
+  - if failed:
+      - assert: "failed"
+      - exit
+  - assert: "execution should have stopped before reaching this assertion"
+  
+  
